<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddService">

    <EditText
        android:id="@+id/editTextAddService"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_service"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAddKilometers"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/add_distance"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddService" />

    <EditText
        android:id="@+id/editTextAddInformation"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/additional_information"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddKilometers" />

    <EditText
        android:id="@+id/editTextAddDate"
        android:layout_width="219dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddInformation" />

    <Button
        android:id="@+id/buttonAddService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddDate" />

</androidx.constraintlayout.widget.ConstraintLayout>